dual heading icon spacing issue fixed

--- a/assets/css/master-addons-styles.css
+++ b/assets/css/master-addons-styles.css
@@ -1940,7 +1940,7 @@
 
 .ma-el-dual-heading .ma-el-dual-heading-wrapper .ma-el-dual-heading-title{
     font-size: 36px;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 .ma-el-dual-heading .ma-el-dual-heading-wrapper .ma-el-dual-heading-title  a,
 .ma-el-dual-heading .ma-el-dual-heading-wrapper .ma-el-dual-heading-title
@@ -1961,7 +1961,7 @@
 .ma-el-dual-heading .ma-el-dual-heading-wrapper .ma-el-dual-heading-title .first-heading,
 .ma-el-dual-heading .ma-el-dual-heading-wrapper .ma-el-dual-heading-title  a .second-heading,
 .ma-el-dual-heading .ma-el-dual-heading-wrapper .ma-el-dual-heading-title .second-heading{
-    padding: 15px 10px;
+    padding: 10px;
 }
 
 .ma-el-dual-heading .ma-el-dual-heading-wrapper .ma-el-dual-heading-title span {
